// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageRedirect should render BaseRedirect 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Redirect
    push={true}
    to="/subscriptions/00000000-0000-0000-0000-000000000000"
  />
</Router>
`;

exports[`PageRedirect should render BaseRedirect with no push 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Redirect
    push={false}
    to="/subscriptions/00000000-0000-0000-0000-000000000000"
  />
</Router>
`;

exports[`PageRedirect should render BaseRedirectLink 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <RedirectLink
    to="/subscriptions/00000000-0000-0000-0000-000000000000"
  >
    WorkspaceList
  </RedirectLink>
</Router>
`;

exports[`PageRedirect should render PageRedirect 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <PageRedirectRender
    expendedRoutePath="experiments/expName/parentrun/AutoML_123"
    noPush={false}
  />
</Router>
`;

exports[`PageRedirect should render PageRedirectLink 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <PageRedirectLinkRender
    expendedRoutePath="experiments/expName/parentrun/AutoML_123"
  >
    Parent Run
  </PageRedirectLinkRender>
</Router>
`;
